# Uni

./: .gitignore  README.md
CompProg/: .template.cpp
CompProg/source/: 23o5.cpp  CMakeLists.txt  casting.cpp  farida.cpp  joust.cpp  knapsack.cpp  order.cpp  planning.cpp  recommend.cpp  skiing2.cpp
CompProg/source/01-ds/: applepie.cpp  (+9 more)
CompStat/: Ex_1.ipynb
CompStat/Exercise 02/: Ex_2.ipynb  fantasy.csv
CompStat/Exercise 03/: ex03_salary.csv  ex_3.ipynb
CompStat/Exercise 04/: ex_4.ipynb  model.rda  spec.rda
CompStat/Exercise 05/: ex_05.ipynb
HWCDP/hdp-linked-list/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
HWCDP/hdp-linked-list/src/: linked_list.cpp  linked_list.hpp  node.hpp
HWCDP/hdp-linked-list/test/: advanced.cpp  basic.cpp  benchmark.cpp
Krypto/: g_ue_01.ipynb  g_ue_01.py  theo_ue4.ipynb
Krypto/Patristocrata/: ciphertext.txt  decrypt.ipynb  encrypt.py
Krypto/TTP/: TTP.ipynb  TTP.py
Krypto/bmpass/: decrypt.py
Krypto/carmicheal/: car.py
Krypto/coinflip/: break_crg.ipynb  break_crg.py  chall.py
Krypto/collector/: chall.py
Krypto/curvy_dec_1/: curvy.ipynb  curvy_decryptor.py  ec.py  utils.py
Krypto/index_calculus/: index_calc.ipynb
Krypto/little_things/: 13.sage  13.sage.py  little.ipynb  little.py  little.sage  little.sage.py  output  pubkey.pem  setup.py  utils.py
Krypto/online_dec_service/: break_cbc.py  challenge.py
Krypto/polly/: checker.py  polly.py  user_passwd  user_passwd.ipynb
Krypto/remains/: remains.py
Krypto/shuffle/: chall.py  output  output_test  xx
MLIA23/: python_intro.ipynb
MLIA23/Exercise_3/: exercise_3.ipynb  utils.py
MLIA23/Exercise_6/: exercise_6.ipynb  three_layer_conv_net.pkl
MLIA23/Exercise_9/: .gitignore  exercise_9.ipynb  requirements.txt
MLIA23/exercise_1/: exercise_1.ipynb  exercise_1.md
MLIA23/exercise_2/: exercise_2.ipynb  utils.py
MLIA23/exercise_5/: exercise_5.ipynb  intro_neural_networks.ipynb
MobSec/: .gitignore  binder_trace-log.txt  binder_trace-parse-log.txt  demo.pcap  demo_bak.pcap  ic_oeffi_directions_color_48dp.psd  output_file.pcap
MobSec/Hands-On/: mmssms.db  parse_tracev3  unifiedlog_parser  unifiedlog_parser_json
NLP/: EX_02.ipynb  MarvinJerome_Stephan__exec04.ipynb
NLP/exec_05/: .gitignore  README.md  Task_2.ipynb  requirements.txt  task_1.py  task_2.py
SonicThinking/: Kopie_von_train_yolov8_classification_on_custom_dataset.ipynb  dataset-download.ipynb
(+1 files in other folders)
